Don't claim to have a GNOME registry handler if it's disabled.  Bug 226576, patch by chpe@gnome.org (Christian Persch), r=bryner, sr=bzbarsky